# wasm_on_browser

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
scripts/: bindings.sh
src/backend/: Cargo.toml
src/backend/src/: errors.rs  guard.rs  handlers.rs  lib.rs  store.rs
src/declarations/backend/: backend.did.d.ts  backend.did.js
src/distributed/backend/: backend.did
src/frontend/src/lib/: agent.ts  api.ts  const.ts  index.ts
src/frontend/src/lib/components/: Card.svelte  Form.svelte
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/proxy/: Cargo.toml
src/proxy/src/: lib.rs
